--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,11 @@
 kotlin.code.style=official
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx2048m
-org.gradle.unsafe.configuration-cache=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
+org.gradle.configuration-cache.parallel=true
 org.gradle.configureondemand=true
+org.gradle.unsafe.isolated-projects=true
+org.gradle.kotlin.dsl.skipMetadataVersionCheck=false
+org.gradle.kotlin.dsl.dcl=true
+org.gradle.configuration-cache.entries-per-key=100
